Fixed overlapping CSS

--- a/assets/css/v_styles.css
+++ b/assets/css/v_styles.css
@@ -34,7 +34,7 @@
 }
 .grid-title > img{
   vertical-align: middle;
-  margin: 0px 20px 0px 0px;
+  margin: 0px 5px 0px 0px;
 }
 .grid-text{
   padding-right: 10px;
